--- a/Group_Project_1/Group_Project_1.ioc
+++ b/Group_Project_1/Group_Project_1.ioc
@@ -2,6 +2,9 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.Tasks01=lineFollowing,40,128,line_following_task,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,I2C_Speed_Mode
@@ -9,13 +12,14 @@ I2C1.Timing=0x0010020A
 KeepUserPlacement=false
 Mcu.CPN=STM32F091RCT6
 Mcu.Family=STM32F0
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP0=FREERTOS
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F091R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -32,8 +36,9 @@ Mcu.Pin18=PB5
 Mcu.Pin19=PB8
 Mcu.Pin2=PC15OSC32_OUT
 Mcu.Pin20=PB9
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin21=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin22=VP_SYS_VS_tim6
+Mcu.Pin23=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
@@ -41,18 +46,24 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=23
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F091RCTx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:3\:0\:false\:false\:false\:true\:false\:false\:false
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:true
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:3\:0\:true\:false\:false\:true\:true\:true\:false
+NVIC.TIM6_DAC_IRQn=true\:3\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM6_DAC_IRQn
+NVIC.TimeBaseIP=TIM6
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=GPIO_Input
 PA0.Locked=true
@@ -200,8 +211,10 @@ TIM1.Prescaler=47
 USART2.IPParameters=VirtualMode,VirtualMode-Asynchronous
 USART2.VirtualMode=VM_ASYNC
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
+VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_SYS_VS_tim6.Mode=TIM6
+VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=NUCLEO-F091RC
