--- a/Group_Project_1/Group_Project_1.ioc
+++ b/Group_Project_1/Group_Project_1.ioc
@@ -24,18 +24,19 @@ Mcu.Pin1=PC14OSC32_IN
 Mcu.Pin10=PA5
 Mcu.Pin11=PA6
 Mcu.Pin12=PA7
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
-Mcu.Pin18=PB5
-Mcu.Pin19=PB6
+Mcu.Pin13=PB0
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PB3
+Mcu.Pin19=PB5
 Mcu.Pin2=PC15OSC32_OUT
-Mcu.Pin20=PB8
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PB6
+Mcu.Pin21=PB8
+Mcu.Pin22=PB9
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
@@ -43,7 +44,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=24
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F091RCTx
@@ -56,12 +57,14 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
 NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-PA0.GPIOParameters=GPIO_PuPd
-PA0.GPIO_PuPd=GPIO_PULLUP
+PA0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA0.GPIO_Label=Btn1 A0
+PA0.GPIO_PuPd=GPIO_PULLDOWN
 PA0.Locked=true
 PA0.Signal=GPIO_Input
-PA1.GPIOParameters=GPIO_PuPd
-PA1.GPIO_PuPd=GPIO_PULLUP
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA1.GPIO_Label=Btn2 A1
+PA1.GPIO_PuPd=GPIO_PULLDOWN
 PA1.Locked=true
 PA1.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
@@ -90,8 +93,9 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_PuPd
-PA4.GPIO_PuPd=GPIO_PULLUP
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=Btn3 A2
+PA4.GPIO_PuPd=GPIO_PULLDOWN
 PA4.Locked=true
 PA4.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -103,20 +107,38 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Signal=S_TIM3_CH1
 PA7.Signal=S_TIM3_CH2
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=Echo 
 PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=Trig
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=Btn4 A3
+PB0.GPIO_PuPd=GPIO_PULLDOWN
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=Motor Output
 PB3.Locked=true
 PB3.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=Motor Output
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_PuPd
+PB6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB6.GPIO_Label=LED D10/PB6
 PB6.GPIO_PuPd=GPIO_NOPULL
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=OLED SCK D15
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=OLED SDA D14
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
@@ -158,8 +180,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=OA_Implementation.ioc
-ProjectManager.ProjectName=OA_Implementation
+ProjectManager.ProjectFileName=Group_Project_1.ioc
+ProjectManager.ProjectName=Group_Project_1
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
