--- a/Group_Project_1/Group_Project_1.ioc
+++ b/Group_Project_1/Group_Project_1.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=lineFollowing,40,128,lineFollowingTask,Default,NULL,Dynamic,NULL,NULL;buttonPoll,24,128,buttonPollTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=lineFollowing,40,128,lineFollowingTask,Default,NULL,Dynamic,NULL,NULL;buttonPoll,16,128,buttonPollTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,I2C_Speed_Mode
@@ -28,19 +28,22 @@ Mcu.Pin1=PC14OSC32_IN
 Mcu.Pin10=PA5
 Mcu.Pin11=PA6
 Mcu.Pin12=PA7
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
-Mcu.Pin18=PB5
-Mcu.Pin19=PB6
+Mcu.Pin13=PB0
+Mcu.Pin14=PB10
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PB3
 Mcu.Pin2=PC15OSC32_OUT
-Mcu.Pin20=PB8
-Mcu.Pin21=PB9
-Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin23=VP_SYS_VS_tim6
-Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PB4
+Mcu.Pin21=PB5
+Mcu.Pin22=PB6
+Mcu.Pin23=PB8
+Mcu.Pin24=PB9
+Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin26=VP_SYS_VS_tim6
+Mcu.Pin27=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
@@ -48,7 +51,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=25
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F091RCTx
@@ -67,12 +70,14 @@ NVIC.TIM1_CC_IRQn=true\:3\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:3\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
-PA0.GPIOParameters=GPIO_PuPd
-PA0.GPIO_PuPd=GPIO_PULLUP
+PA0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA0.GPIO_Label=Btn1 A0
+PA0.GPIO_PuPd=GPIO_PULLDOWN
 PA0.Locked=true
 PA0.Signal=GPIO_Input
-PA1.GPIOParameters=GPIO_PuPd
-PA1.GPIO_PuPd=GPIO_PULLUP
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA1.GPIO_Label=Btn2 A1
+PA1.GPIO_PuPd=GPIO_PULLDOWN
 PA1.Locked=true
 PA1.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
@@ -101,8 +106,9 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_PuPd
-PA4.GPIO_PuPd=GPIO_PULLUP
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=Btn3 A2
+PA4.GPIO_PuPd=GPIO_PULLDOWN
 PA4.Locked=true
 PA4.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -114,20 +120,42 @@ PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Signal=S_TIM3_CH1
 PA7.Signal=S_TIM3_CH2
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=Echo 
 PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=Trig
 PA9.Locked=true
 PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=Btn4 A3
+PB0.GPIO_PuPd=GPIO_PULLDOWN
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB10.Locked=true
+PB10.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=Motor Output
 PB3.Locked=true
 PB3.Signal=GPIO_Output
+PB4.Locked=true
+PB4.Signal=GPIO_Input
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=Motor Output
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PB6.GPIOParameters=GPIO_PuPd
+PB6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB6.GPIO_Label=LED D10/PB6
 PB6.GPIO_PuPd=GPIO_NOPULL
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=OLED SCK D15
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=OLED SDA D14
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
