--- a/Group_Project_1/Group_Project_1.ioc
+++ b/Group_Project_1/Group_Project_1.ioc
@@ -14,26 +14,32 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP5=TIM3
+Mcu.IP6=USART2
+Mcu.IPNb=7
 Mcu.Name=STM32F091R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14OSC32_IN
 Mcu.Pin10=PA5
-Mcu.Pin11=PB0
-Mcu.Pin12=PA8
-Mcu.Pin13=PA9
-Mcu.Pin14=PA10
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB3
-Mcu.Pin18=PB5
-Mcu.Pin19=PB8
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB0
+Mcu.Pin14=PB10
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
 Mcu.Pin2=PC15OSC32_OUT
-Mcu.Pin20=PB9
-Mcu.Pin21=VP_SYS_VS_Systick
-Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin20=PB3
+Mcu.Pin21=PB4
+Mcu.Pin22=PB5
+Mcu.Pin23=PB6
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_SYS_VS_tim6
+Mcu.Pin27=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
@@ -41,7 +47,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=23
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F091RCTx
@@ -52,17 +58,25 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
-PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=GPIO_Input
+NVIC.SysTick_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:false
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:true
+NVIC.TimeBase=TIM6_DAC_IRQn
+NVIC.TimeBaseIP=TIM6
+PA0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA0.GPIO_Label=Btn1 A0
+PA0.GPIO_PuPd=GPIO_PULLDOWN
 PA0.Locked=true
 PA0.Signal=GPIO_Input
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA1.GPIO_Label=Btn2 A1
+PA1.GPIO_PuPd=GPIO_PULLDOWN
 PA1.Locked=true
 PA1.Signal=GPIO_Input
-PA10.GPIOParameters=PinState
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=Right sensor
 PA10.Locked=true
-PA10.PinState=GPIO_PIN_SET
-PA10.Signal=GPIO_Output
+PA10.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -89,6 +103,9 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=Btn3 A2
+PA4.GPIO_PuPd=GPIO_PULLDOWN
 PA4.Locked=true
 PA4.Signal=GPIO_Input
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
@@ -98,19 +115,48 @@ PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
-PA8.Locked=true
+PA6.Signal=S_TIM3_CH1
+PA7.Signal=S_TIM3_CH2
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=Echo 
 PA8.Signal=S_TIM1_CH1
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=Trig
 PA9.Locked=true
-PA9.Signal=S_TIM1_CH2
+PA9.Signal=GPIO_Output
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=Btn4 A3
+PB0.GPIO_PuPd=GPIO_PULLDOWN
 PB0.Locked=true
 PB0.Signal=GPIO_Input
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=Middle sensor
+PB10.Locked=true
+PB10.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=Motor Output
 PB3.Locked=true
 PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=Left sensor
+PB4.Locked=true
+PB4.Signal=GPIO_Input
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=Motor Output
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB6.GPIO_Label=LED D10/PB6
+PB6.GPIO_PuPd=GPIO_NOPULL
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=OLED SCK D15
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=OLED SDA D14
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
@@ -162,7 +208,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -188,22 +234,27 @@ RCC.USART2Freq_Value=48000000
 RCC.USART3Freq_Value=48000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
 SH.S_TIM1_CH1.ConfNb=1
-SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
-SH.S_TIM1_CH2.ConfNb=1
-TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Channel-PWM Generation2 CH2
-TIM1.Period=999
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
+TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler
 TIM1.Prescaler=47
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,Channel-PWM Generation1 CH1
+TIM3.Period=999
+TIM3.Prescaler=47
 USART2.IPParameters=VirtualMode,VirtualMode-Asynchronous
 USART2.VirtualMode=VM_ASYNC
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM1_VS_ClockSourceINT.Mode=Internal
-VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_SYS_VS_tim6.Mode=TIM6
+VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F091RC
 boardIOC=true
 isbadioc=false
