--- a/Group_Project_1/Group_Project_1.ioc
+++ b/Group_Project_1/Group_Project_1.ioc
@@ -32,18 +32,19 @@ Mcu.Pin13=PB0
 Mcu.Pin14=PB10
 Mcu.Pin15=PA8
 Mcu.Pin16=PA9
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB3
+Mcu.Pin17=PA10
+Mcu.Pin18=PA13
+Mcu.Pin19=PA14
 Mcu.Pin2=PC15OSC32_OUT
-Mcu.Pin20=PB4
-Mcu.Pin21=PB5
-Mcu.Pin22=PB6
-Mcu.Pin23=PB8
-Mcu.Pin24=PB9
-Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin26=VP_SYS_VS_tim6
-Mcu.Pin27=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PB3
+Mcu.Pin21=PB4
+Mcu.Pin22=PB5
+Mcu.Pin23=PB6
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin27=VP_SYS_VS_tim6
+Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
@@ -51,7 +52,7 @@ Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F091RCTx
@@ -80,6 +81,10 @@ PA1.GPIO_Label=Btn2 A1
 PA1.GPIO_PuPd=GPIO_PULLDOWN
 PA1.Locked=true
 PA1.Signal=GPIO_Input
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=Right sensor
+PA10.Locked=true
+PA10.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -132,12 +137,16 @@ PB0.GPIO_Label=Btn4 A3
 PB0.GPIO_PuPd=GPIO_PULLDOWN
 PB0.Locked=true
 PB0.Signal=GPIO_Input
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=Middle sensor
 PB10.Locked=true
 PB10.Signal=GPIO_Input
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=Motor Output
 PB3.Locked=true
 PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=Left sensor
 PB4.Locked=true
 PB4.Signal=GPIO_Input
 PB5.GPIOParameters=GPIO_Label
