--- a/Group_Project_1/Group_Project_1.ioc
+++ b/Group_Project_1/Group_Project_1.ioc
@@ -4,7 +4,7 @@ CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=lineFollowing,40,128,lineFollowingTask,Default,NULL,Dynamic,NULL,NULL;buttonPoll,16,256,buttonPollTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=lineFollowing,40,128,lineFollowingTask,Default,NULL,Dynamic,NULL,NULL;buttonPoll,16,256,buttonPollTask,Default,NULL,Dynamic,NULL,NULL;ultrasonicLoop,8,128,ultrasonicTask,Default,NULL,Dynamic,NULL,NULL;sponsors,8,128,sponsorsTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,I2C_Speed_Mode
