--- a/Group_Project_1/Group_Project_1.ioc
+++ b/Group_Project_1/Group_Project_1.ioc
@@ -3,8 +3,10 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=lineFollowing,40,128,lineFollowingTask,Default,NULL,Dynamic,NULL,NULL;buttonPoll,16,256,buttonPollTask,Default,NULL,Dynamic,NULL,NULL;ultrasonicLoop,8,128,ultrasonicTask,Default,NULL,Dynamic,NULL,NULL;sponsors,8,128,sponsorsTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,configMINIMAL_STACK_SIZE,configTOTAL_HEAP_SIZE
+FREERTOS.Tasks01=lineFollowing,40,128,lineFollowingTask,Default,NULL,Dynamic,NULL,NULL;buttonPoll,16,256,buttonPollTask,Default,NULL,Dynamic,NULL,NULL;ultrasonicLoop,8,128,ultrasonicTask,Default,NULL,Dynamic,NULL,NULL;sponsors,8,128,sponsorsTask,Default,NULL,Dynamic,NULL,NULL;speaker,8,128,speakerTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configMINIMAL_STACK_SIZE=64
+FREERTOS.configTOTAL_HEAP_SIZE=4096
 File.Version=6
 I2C1.I2C_Speed_Mode=I2C_Fast
 I2C1.IPParameters=Timing,I2C_Speed_Mode
@@ -19,8 +21,9 @@ Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
 Mcu.IP6=TIM3
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP7=TIM14
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F091R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -29,30 +32,32 @@ Mcu.Pin10=PA5
 Mcu.Pin11=PA6
 Mcu.Pin12=PA7
 Mcu.Pin13=PB0
-Mcu.Pin14=PB10
-Mcu.Pin15=PA8
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA13
-Mcu.Pin19=PA14
+Mcu.Pin14=PB1
+Mcu.Pin15=PB10
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA13
 Mcu.Pin2=PC15OSC32_OUT
-Mcu.Pin20=PB3
-Mcu.Pin21=PB4
-Mcu.Pin22=PB5
-Mcu.Pin23=PB6
-Mcu.Pin24=PB8
-Mcu.Pin25=PB9
-Mcu.Pin26=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin27=VP_SYS_VS_tim6
-Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PA14
+Mcu.Pin21=PB3
+Mcu.Pin22=PB4
+Mcu.Pin23=PB5
+Mcu.Pin24=PB6
+Mcu.Pin25=PB8
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin28=VP_SYS_VS_tim6
+Mcu.Pin29=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PF0-OSC_IN
+Mcu.Pin30=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=29
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F091RCTx
@@ -81,8 +86,6 @@ PA1.GPIO_Label=Btn2 A1
 PA1.GPIO_PuPd=GPIO_PULLDOWN
 PA1.Locked=true
 PA1.Signal=GPIO_Input
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=Right sensor
 PA10.Locked=true
 PA10.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
@@ -116,14 +119,15 @@ PA4.GPIO_Label=Btn3 A2
 PA4.GPIO_PuPd=GPIO_PULLDOWN
 PA4.Locked=true
 PA4.Signal=GPIO_Input
-PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
+PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA5.GPIO_Label=LD2 [Green Led]
-PA5.GPIO_Mode=GPIO_MODE_OUTPUT_PP
 PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.Locked=true
 PA6.Signal=S_TIM3_CH1
+PA7.Locked=true
 PA7.Signal=S_TIM3_CH2
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=Echo 
@@ -137,6 +141,9 @@ PB0.GPIO_Label=Btn4 A3
 PB0.GPIO_PuPd=GPIO_PULLDOWN
 PB0.Locked=true
 PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=Speakers
+PB1.Signal=S_TIM14_CH1
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=Middle sensor
 PB10.Locked=true
@@ -216,7 +223,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -242,6 +249,8 @@ RCC.USART2Freq_Value=48000000
 RCC.USART3Freq_Value=48000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM14_CH1.0=TIM14_CH1,PWM Generation1 CH1
+SH.S_TIM14_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
@@ -251,6 +260,8 @@ SH.S_TIM3_CH2.ConfNb=1
 TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler
 TIM1.Prescaler=47
+TIM14.Channel=TIM_CHANNEL_1
+TIM14.IPParameters=Channel
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period,Channel-PWM Generation1 CH1
@@ -263,6 +274,8 @@ VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F091RC
