--- a/Group_Project_1/Group_Project_1.ioc
+++ b/Group_Project_1/Group_Project_1.ioc
@@ -131,6 +131,7 @@ PA7.Locked=true
 PA7.Signal=S_TIM3_CH2
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=Echo 
+PA8.Locked=true
 PA8.Signal=S_TIM1_CH1
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=Trig
@@ -143,6 +144,7 @@ PB0.Locked=true
 PB0.Signal=GPIO_Input
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=Speakers
+PB1.Locked=true
 PB1.Signal=S_TIM14_CH1
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=Middle sensor
